[tool.poetry]
name = "wordle-csit-pro"
version = "0.1.0"
description = ""
authors = ["Nikita B.<maxim.rossa@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
fastapi = "^0.114.1"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
uvicorn = "^0.30.6"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"

[tool.poetry.scripts]
app = "src.app:app"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
ruff = "0.5.5"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
	"ALL",
]

ignore = [
	"FA",
	"PLR0913",
	"RUF001",
	"RUF002",
	"RUF003",
	"FBT001",
	"FBT002",
	"SIM117", # Nested 'with'
	"SIM118", # 'key in dict' instead 'key in dict.keys()'
	"G004",	# Logging statement uses f-string
	"ANN101",
	"ANN204", # Annotations for __init__
	"DTZ", # call datetime without timezone
	"Q000", # single quotes
    "CPY", # copywriting rule
    "FAST002", # Annotated in Fast API
    "B008", # Call Depends as default arg
	"DOC201",
	"FURB118",
	"D103", # docstrings
]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"